src/styles/globals.scss
@use './abstracts' as *;

html,
body,
#root {
  padding: 0;
  margin: 0;
  width: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}

img {
  width: 100%;
  max-width: 100%;
  object-fit: cover;
  display: block;
}

h2 {
  margin-bottom: 2rem;
}

.main-container {
  padding-left: 1rem;
  padding-right: 1rem;
  max-width: 1000px;
}

section {
  margin: 0 auto;
  padding: 2.5rem 0;
  @include md {
    padding: 100px 0;
  }
}

.Home {
  z-index: 5;
  position: relative;
  background-color: white;
}

